2007-03-01  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpdrawable-blend.c (gimp_drawable_blend): use
	gimp_drawable_bytes_with_alpha() instead of manually adding
	alpha to the value returned by gimp_drawable_bytes()

2007-03-01 João S. O. Bueno Calligaris <gwidon@mpc.com.br>

        * plug-ins/common/postscript.c: add callback to resolution
	changes in the postscipt load dialog to update the image size
	in pixels. Fixes bug #413347.

2007-03-01  Raphaël Quinet  <raphael@gimp.org>

	* app/tools/gimpmeasuretool.c (gimp_measure_tool_cursor_update): 
	don't suggest Shift when a new point cannot be added to point 0.

2007-02-28  Raphaël Quinet  <raphael@gimp.org>

	* app/tools/gimpmeasuretool.[ch]: added status bar help messages
	explaining the usage of the modifiers.

	* app/tools/gimpvectortool.c (gimp_vector_tool_status_update):
	suggest Ctrl for edit mode, to close the path or move handles.

	* app/tools/gimpcroptool.c (gimp_crop_tool_button_release):
	"press enter" should be "press Enter", as in the other tools.

2007-02-28  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpmeasuretool.c: made labels selectable.

2007-02-28  João S. O. Bueno Calligaris <gwidion@mpc.com.br>

        * app/tools/gimprectangletool.c: removes recursive code 
	when adjusting rectangle size. Fixes bug #410234.

2007-02-28  Sven Neumann  <sven@gimp.org>

	* app/tools/gimptool.c (gimp_tool_check_click_distance):
	simplified callers and moved calculations out of the SQR() macro.

2007-02-28  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangleselecttool.c
	(gimp_rect_select_tool_rectangle_changed): don't change the
	selection while the tool is active. Fixes bug #398185. Thanks to
	Martin Nordholts for investigating this problem.

	* app/tools/gimprectangletool.c: minor cleanup.

2007-02-28  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimptool.c (gimp_tool_check_click_distance): need to
	check the distance in screen coords, not image coords.
